vlib/v/checker/tests/assign_expr_unresolved_variables_err_chain.vv
fn main() {
	a := b
	b := c
	c := a
	_ = a
	_ = b
	_ = c
}
